projects/compiler/test/parser/typedecl_error_illegal_body_part.out
Error at %FILE_NAME%:2:3
Unexpected token 'while':
  |    while true { }
       ^